--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Copyright 2018 -->
+<!-- Copyright 2018  adding to rebasing conflict-->
 <head>
 	<title>A Very Respectufull website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
