fb adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<!-- Copyright 2018  adding to rebasing conflict-->
 <head>
-	<title>A Very Respectufull website</title>
+	<title>Lots of Trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,6 +14,8 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
+			Just some content
+			Just nothin' but trouble.
 			Just a pinnascocuua
 		</p>
 	</main>
