adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Copyright 2018 Vincenzo Testa-->
 <head>
 	<title>Lots of Trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
