Done with simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Copyright 2018 Vincenzo Testa-->
 <head>
-	<title>Lots of Trouble</title>
+	<title>Updating Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,9 +15,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
-			Just nothin' but trouble.
-			Just a pinnascocuua
+			Adding more information.
 		</p>
 	</main>
 	<footer class="container">
