Updating for tag 1.2

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Copyright 2018 Vincenzo Testa-->
 <head>
-	<title>Updating Title</title>
+	<title>Updating Title for Tagging Compare Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
